# Taraxacum

./: .gitignore  .travis.yml  CMakeLists.txt  CNAME  README.md  index.html  install_deps.sh
Common/: Microservice.h  Uservice_Interface.h
Microservices/: Uservice_Interface.h
Providers/circuitbreaker/: CircuitBreaker.h
Providers/log/: Logging.h  placeholder.txt
Providers/metrics/: Metrics.h
Providers/service discovery/: Publisher.h
Providers/transport/: Endpoint.h
auth/: placeholder.txt
autopilot-example/: README.md  cpu.data  docker-compose.yml  local-compose.yml
autopilot-example/app1/: containerpilot.json
autopilot-example/app2/: Dockerfile  containerpilot.json
autopilot-example/nginx/: containerpilot.json  index.html  nginx.conf.ctmpl
autopilot-example/sol01/: Dockerfile  containerpilot.json
circuitbreaker/: placeholder.txt
examples/: CMakeLists.txt
examples/Autopilot pattern example/: app1.cpp  app2.cpp
examples/Rest/: Rest_Example.cpp  Rest_routing_Example.cpp  Script_Microservice.cpp  app1.cpp  app2.cpp  autopilot.cpp  config.json
examples/Rest/tests/: test.sh
examples/Simple_Microservice/: Rest_example.cpp  example1.cpp  stress.json  stresscurl.sh  test.json  test.sh  test0.json  test2.json  test2.sh  testcurl.sh  testsiege.sh
examples/Simple_Microservice/tests/: stress.json  stresscurl.sh
examples/testsaproling/: CMakeLists.txt  testsaprolingcluster.cpp
include/: CircuitBreaker.h  InfluxDB.h  Logging.h  Metrics.h  Microservice.h  ServiceDiscovery.h  Uservice_Interface.h  Uservice_version.h  pstream.h
include/Common/: Microservice.h  Uservice_Interface.h  Uservice_version.h
include/Providers/circuitbreaker/: CircuitBreaker.h
include/Providers/log/: Logging.h
include/Providers/metrics/: Metrics.h
metrics/: placeholder.txt
transport/: Endpoint.h
