cmake_minimum_required(VERSION 3.2)
set(CMAKE_FIND_LIBRARY_PREFIXES /usr/lib)
set(CMAKE_FIND_LIBRARY_SUFFIXES .so)
set(Boost_INCLUDE_DIR /usr/include)
set(Boost_LIBRARY_DIR /usr/lib)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin/")
find_package(Boost REQUIRED COMPONENTS )
find_package(RapidJSON)

if (RapidJSON_FOUND)
    include_directories(${RapidJSON_INCLUDE_DIRS})
endif ()

project(testsaproling)

set(CMAKE_CXX_STANDARD 11)
include_directories("/usr/local/include" "/usr/include")
set(SOURCE_FILES testsaprolingcluster.cpp)
add_executable(testsaproling ${SOURCE_FILES})
target_link_libraries(testsaproling net_static pthread)
